# prompt-circumstance

./: .gitignore  README.md  pyproject.toml
configs/: direct-mock-baseline.yaml  direct-mock-hardened.yaml  direct-ollama-baseline.yaml  direct-ollama-hardened.yaml  direct-openai-baseline.yaml  direct-openai-hardened.yaml  indirect-mock-baseline.yaml  indirect-mock-hardened.yaml  indirect-ollama-baseline.yaml  indirect-ollama-hardened.yaml  slice1-mock-baseline.yaml  slice1-mock-hardened.yaml  slice1-ollama-baseline.yaml  slice1-ollama-hardened.yaml  slice1-openai-baseline.yaml  slice1-openai-hardened.yaml
configs/dissertation/: README.md  matrix.yaml  sweep.sh  validate.sh
data/attacks/: direct_attack_templates.json
data/tasks/: direct_tasks.jsonl  indirect_tasks.jsonl  tool_integrated_tasks.jsonl
planning/00-index/: README.md
planning/10-literature/: lit-review-feedback.md  lit-review.md
planning/20-research-gap/: ResearchGap.md
planning/30-method-specs/: attack-template-spec.md  research-build-breakdown.md  run-logging-schema-spec.md  task-schema-spec.md
planning/40-implementation/: current-development-state.md  implementation-slice-01.md  implementation-slice-02.md  implementation-slice-03.md  implementation-slice-04-plus.md  implementation-slice-06-dissertation-package.md  implementation-suite-maturity.md
scripts/dissertation/: JUDGE_STUDY_README.md  generate_dissertation_configs.py  judge_agreement.py  llm_judge.py  (+1 more)
tests/: test_attacks_evaluator.py  test_config.py  test_runner_smoke_mock.py  test_tasks_evaluator.py  test_tools.py
(+154 files in other folders)
